# MaxKiller

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  analysis_options.yaml  dart_test.yaml  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/app/: app.dart  di.dart  router.dart
lib/core/: log.dart
lib/core/ffi/: open.dart
lib/core/network/hlamtam/: api.dart  client.dart  constants.dart  packet.dart
lib/core/network/hlamtam/abstraction/: response.dart
lib/core/network/hlamtam/endpoints/: endpoint.dart
lib/core/network/hlamtam/endpoints/auth/auth_request/: endpoint.rev1.dart  response.rev1.dart  types.dart
lib/core/network/hlamtam/exceptions/: api.dart  base.dart  protocol.dart
lib/core/network/hlamtam/handlers/: handler.dart  ping.handler.dart
lib/core/network/hlamtam/services/: versioning.dart
lib/core/network/hlamtam/services/auth/: service.dart
lib/features/auth/domain/: auth_repository.dart
lib/features/auth/domain/models/: auth_request.dart
lib/features/auth/infrastructure/: auth_repository_impl.dart
lib/features/auth/presentation/register/: register.cubit.dart  register.page.dart  register.state.dart
lib/shared/core/ffi/: lz4.dart
lib/shared/core/network/hlamtam/: api.dart  api_impl.dart  client.dart  packet.dart  response.dart
lib/shared/core/network/hlamtam/endpoints/: endpoint.dart  selector.dart  selector_impl.dart
lib/shared/core/network/hlamtam/exceptions/: api.dart  protocol.dart
lib/shared/core/network/hlamtam/handlers/: handler.dart  ping.handler.dart
lib/shared/core/network/hlamtam/operations/: operation.dart  selector.dart  selector_impl.dart
lib/shared/core/serialization/: int_from_any_converter.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/: CMakeLists.txt
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/helpers/: data_generators.dart
test/integration/core/network/hlamtam/: api.integration.dart
test/unit/core/network/hlamtam/: packet.test.dart
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+6 files in other folders)
